--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
     <title>Contanct information for Yize Liu</title>
   </head>
   <body>
+    <a href="cover.html">back</a>
     <h2>Contact information</h2>
     <p><b>Phone Number:</b> <em> (857)8691466(USA)</em>  <em>18717302657(China)</em></p>
     <p><b>Email: </b> <em>lyz95222@bu.edu</em></p>
