--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,7 @@
            </style>
   </head>
   <body>
+    <a href="cover.html">back</a>
     <h1>My Resume</h1>
     <p><b>Yize Liu</b> Tel:(857)8691466, Email: lyz95222@bu.edu
     </p>
