--- a/resumeLYZ.html
+++ b/resumeLYZ.html
@@ -13,6 +13,7 @@
            </style>
   </head>
 <body>
+    <a href="cover.html">back</a>
     <h1>Welcome to the my presonal website</h1>
     <img src="logo.jpg">
     <p>
